--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,59 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
+.task-container {
+    width: 1300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    border: 2px solid #540000;
+    border-radius: 8px;
+    background-color: #00b193;
+}
+
+.card {
+    width: 200px;
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.card h3 {
+    margin: 0;
+    font-size: 18px;
+}
+
+.card ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.card ul li {
+    margin: 5px 0;
+}
+
+.card input {
+    margin-right: 10px;
+}
+
+.card p {
+    font-size: 12px;
+    color: #555;
+}
+
+form {
+    margin-bottom: 30px;
+    padding: 22px;
+    background-color: #fff;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
