--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,16 @@ body {
     background-size: cover;
 }
 
-#app {
-    margin: 100px;
-    display: flex;
-    justify-content: center;
-}
-
 .task-container {
     width: 1300px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+}
+
+#app {
+    margin: 100px;
+    display: flex;
     justify-content: space-between;
 }
 
@@ -26,8 +26,6 @@ body {
     border: 2px solid #540000;
     border-radius: 8px;
     background-color: #00b193;
-    padding: 10px;
-    margin: 0 10px;
 }
 
 .card {
@@ -36,7 +34,6 @@ body {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #fff;
 }
 
 .card h3 {
@@ -53,13 +50,27 @@ body {
     margin: 5px 0;
 }
 
+.card input {
+    margin-right: 10px;
+}
+
+.card p {
+    font-size: 12px;
+    color: #555;
+}
+
+.columns-container {
+    display: flex;
+    flex-direction: row;
+    gap: 210px;
+}
+
 form {
     margin-bottom: 30px;
     padding: 22px;
     background-color: #fff;
     border-radius: 8px;
     border: 1px solid #ccc;
-    width: 300px;
 }
 
 form div {
@@ -86,9 +97,10 @@ form button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-right: 10px;
 }
 
 form button:hover {
     background-color: #5a54e6;
 }
+
+
